Prevent google recaptcha box from overlapping the zendesk icon
Fixes DD 78973 221

--- a/app/design/frontend/Travers/default/Magento_Newsletter/styles/module/_common.scss
+++ b/app/design/frontend/Travers/default/Magento_Newsletter/styles/module/_common.scss
@@ -41,4 +41,8 @@
             }
         }
     }
+
+    .grecaptcha-badge {
+        bottom: 75px !important; // override Google Recaptcha JS
+    }
 }
